--- a/stories/building-of-stacklead.html
+++ b/stories/building-of-stacklead.html
@@ -27,14 +27,14 @@
       <section class="gist"><a href="http://stacklead.com">Stacklead</a> started from <a href="http://twitter.com/gwintrob">Gordon Wintrob</a> &amp; <a href="#">Ted Tomlinson</a>'s desire to address a long-standing problem in customer acquisition. Entrepreneurs are oft-advised to tackle problems they've faced&mdash;StackLead is a prime example of this.<br><br>They're also a <a href="http://ycombinator.com">Y Combinator</a> backed startup.
       </section>
 
-<p class="first-paragraph">Ted and I grew up in Los Angeles and started tinkering with computers in our early teens, but we didn’t meet until attending MIT together in Boston. We were housemates in college where we both studied computer science and got to enjoy a curriculum and work/life balance that is often called “drinking from a firehose”.</p>
+<p class="first-paragraph">Ted and I grew up in Los Angeles and started tinkering with computers in our early teens, but we didn’t meet until attending MIT together in Boston. We were housemates in college where we studied computer science and got to enjoy a curriculum and work/life balance that is often called “drinking from a firehose”.</p>
 <p>After graduating from MIT, Ted built software at Google on the Business Intelligence and Wallet teams, while I was working on an enterprise payments startup. We began collaborating towards the end of 2013.</p>
 
 <h2>Initial Inspiration</h2>
 <p class="first-paragraph">Inspired by some physician friends, we built a mobile app for healthcare providers, and it was important to identify whether a new user was a physician, nurse, or administrator, and to identify the size of their institution.</p>
 <blockquote class="pullquote">We found ourselves spending time looking up each new signup and trying to determine their role &amp; organization.</blockquote>
 <p>From our experiences at previous companies, we realized that understanding users was an important problem and something a lot of people needed, so we decided to do something about it.</p>
-<p>In order to to validate and understand the market, we spoke to many of our friends in sales at various Bay Area startups&mdash;we loved hearing about hacks of how they were manually researching their leads, such as disqualifying leads that sign up with their personal email addresses and hiring someone from <a href="http://odesk.com">oDesk</a> to research the rest of the leads in <a href="http://rapportive.com/">Rapportive</a>.</p>
+<p>In order to to validate and understand the market, we spoke to many of our friends in sales at various Bay Area startups&mdash;we loved hearing about hacks of how they were manually researching their leads, disqualifying leads that sign up with their personal email addresses, and hiring people from <a href="http://odesk.com">oDesk</a> to research the rest of the leads in <a href="http://rapportive.com/">Rapportive</a>.</p>
 <p>It’s great to find people hacking together tools in-house or doing something manually&mdash;these are opportunities to build new startups. No one likes organizing their receipts or changing the oil in their car. Similarly, businesses have lots of tasks they would rather delegate.</p>
 
 <h2>Challenges We Faced</h2>
