removed footer & changed index page

--- a/index.html
+++ b/index.html
@@ -1,91 +1,47 @@
-<!DOCTYPE html>
-
 <html>
 <head>
-  <link href="stylesheets/buildingof-landing.css" rel="stylesheet" type="text/css">
-<link href='http://fonts.googleapis.com/css?family=Lato:400,900|Libre+Baskerville:400,700,400italic' rel='stylesheet' type='text/css'>
-
-  <title>Building Of</title>
-  <style type="text/css">
-                #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-                  /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-                     We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-  </style>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <link rel="stylesheet" type="text/css" href="http://buildingof.com/stylesheets/buildingof.css"/>
+  <link href='http://fonts.googleapis.com/css?family=Lato:400,900|Libre+Baskerville:400,700,400italic' rel='stylesheet' type='text/css'>
 </head>
-
+<title>Building of - Chronicling the Rise and Fall of Startups</title>
 <body>
-  <div id="content">
-    <div id="img">
-      <a href="http://buildingof.com"><img alt="Building Of" class="logo"
-      height="50px" src="buildingof-logo.svg" style=
-      "display: block; margin: auto;"> </a>
+  <nav>
+    <div id="img"><a href="http://buildingof.com">
+      <img class="logo" src="http://buildingof.com/buildingof-logo.svg" width="187px" height="50px" alt="Building Of">
+      </img>
+      </a>
     </div>
-
+    <div id="links">
+      <a href="/index.html" class="header-links" id="subscribe" style="margin-right: 2em">Subscribe
+      </a>
+      <a href="mailto:editors@buildingof.com?subject=I'd like to share my story
+      &body=I'm currently working on ..." class="header-links" id="share-story">Share your story
+      </a>
+    </div>
+  </nav>
+<!-- end of navigational header -->
+  <section id="content">
     <h3 id="tagline">Chronicling the Rise and Fall of Startups</h3>
-
-    <section id="landing-page">
-      <article id="first-block">
-        <p id="first-paragraph">We’re launching a resource highlighting and
-        chronicling the work it takes to launch a startup and the founders’
-        challenges and struggles along their journey, letting you in on
-        experiences, lessons, &amp; post-mortems that would otherwise remain
-        unshared.<br>
-        <br>
-        Their struggles might make you weep. You will laugh, you’ll find
-        yourself living joyously, working harder, and taking on causes.</p>
+    <article id="first">
+      <a href="/stories/building-of-stacklead.html"><h1 id="title">StackLead &amp; Pain Point Resolution</h1></a>
+      <section class="gist"><a href="http://stacklead.com">Stacklead</a> started from <a href="http://twitter.com/gwintrob">Gordon Wintrob</a> &amp; <a href="#">Ted Tomlinson</a>'s desire to address a long-standing problem in customer acquisition. Entrepreneurs are oft-advised to tackle problems they've faced&mdash;StackLead is a prime example of this.
+      </section>
+      <p class="first-paragraph">Ted and I grew up in Los Angeles and started tinkering with computers in our early teens, but didn’t meet until attending MIT together in Boston. We were housemates in college and both studied computer sci...</p>
+    </article>
+        <article id="first">
+      <a href="/stories/building-of-weft.html"><h1 id="title">Weft &amp; Incremental Iteration</h1></a>
+      <section class="gist">This is the story of how <a href="http://weft.io">Weft</a> began and how they turned a bike tracker into a logistics optimization company, as told by its founder &amp; CEO, <a href="http://twitter.com/m_held">Marc Held</a>.
+      </section>
+      <p class="first-paragraph">I moved to San Francisco a couple years ago when I came out for a Quantified Self conference — the minute I got there, I fell in love with California, and canceled my return flight. Probably one of the craz...</p>
       </article>
 
-      <article id="second-block">
-        <p id="second-paragraph">We’re currently curating stories from
-        entrepreneurs. Subscribe to be the first to read once they’re
-        public.<br><br>We won't spam you.</p>
+  <footer>
+      </footer>
       </article>
-
-      <div id="signup-form">
-        <!-- Begin MailChimp Signup Form -->
-
-        <div id="mc_embed_signup">
-          <form action=
-          "http://buildingof.us8.list-manage.com/subscribe/post?u=f2afc3c6fc0c0684fd223ef91&amp;id=93f6fad436"
-          class="validate" id="mc-embedded-subscribe-form" method="post" name=
-          "mc-embedded-subscribe-form" novalidate="" target="_blank">
-            <div class="mc-field-group">
-              <input class="required email" id="mce-EMAIL" name="EMAIL"
-              placeholder="Enter your email address" type="email" value="">
-            </div>
-
-            <div class="clear" id="mce-responses">
-              <div class="response" id="mce-error-response" style=
-              "display:none"></div>
-
-              <div class="response" id="mce-success-response" style=
-              "display:none"></div>
-            </div>
-            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-
-            <div style="position: absolute; left: -5000px;">
-              <input name="b_f2afc3c6fc0c0684fd223ef91_93f6fad436" type="text"
-              value="">
-            </div>
-
-            <div class="clear">
-              <input class="button" id="mc-embedded-subscribe" name="subscribe"
-              type="submit" value="Subscribe">
-            </div>
-          </form>
-        </div><!--End mc_embed_signup-->
-      </div><!-- end of email form -->
-
-      <div id="email-us">
-        <p id="email-paragraph" style="font-family: Lato;">Additionally, get in touch if you would like to
-        share your story and we’ll take care of everything:<br>
-        <a href=
-        "mailto:editors@buildingof.com?subject=I'd%20like%20to%20share%20my%20story&amp;body=I'm%20currently%20working%20on%20..."
-        style=
-        "text-decoration: none; color: #37abc8; margin-bottom: 0px; -webkit-margin-after: 0em;">
-        editors@buildingof.com</a></p>
-      </div>
-    </section><script type="text/javascript">
+   </section>
+ 
+    <script type="text/javascript">
         var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
     </script> <script type="text/javascript">
@@ -94,6 +50,6 @@
             pageTracker._trackPageview();
             } catch(err) {}
     </script>
-  </div>
+
 </body>
 </html>
