--- a/stories/home.html
+++ b/stories/home.html
@@ -24,21 +24,19 @@
   <section id="content">
     <h3 id="tagline">Chronicling the Rise and Fall of Startups</h3>
     <article id="first">
-      <h1 id="title">StackLead &amp; Pain Point Resolution</h1>
+      <a href="/stories/building-of-stacklead.html"><h1 id="title">StackLead &amp; Pain Point Resolution</h1></a>
       <section class="gist"><a href="http://stacklead.com">Stacklead</a> started from <a href="http://twitter.com/gwintrob">Gordon Wintrob</a> &amp; <a href="#">Ted Tomlinson</a>'s desire to address a long-standing problem in customer acquisition. Entrepreneurs are oft-advised to tackle problems they've faced&mdash;StackLead is a prime example of this.
       </section>
       <p class="first-paragraph">Ted and I grew up in Los Angeles and started tinkering with computers in our early teens, but didn’t meet until attending MIT together in Boston. We were housemates in college and both studied computer sci...</p>
     </article>
         <article id="first">
-      <h1 id="title">Weft &amp; Incremental Iteration</h1>
+      <a href="/stories/building-of-weft.html"><h1 id="title">Weft &amp; Incremental Iteration</h1></a>
       <section class="gist">This is the story of how <a href="http://weft.io">Weft</a> began and how they turned a bike tracker into a logistics optimization company, as told by its founder &amp; CEO, <a href="http://twitter.com/m_held">Marc Held</a>.
       </section>
       <p class="first-paragraph">I moved to San Francisco a couple years ago when I came out for a Quantified Self conference — the minute I got there, I fell in love with California, and canceled my return flight. Probably one of the craz...</p>
       </article>
 
   <footer>
-<p>If you run a startup or know someone that does, and think that they have an interesting story to share with our subscribers, please reach out to <a href="mailto:editors@buildingof.com?subject=I'd like to share my story
-      &body=I'm currently working on ...">editors@buildingof.com</a></p>
       </footer>
       </article>
    </section>
