--- a/stories/building-of-stacklead.html
+++ b/stories/building-of-stacklead.html
@@ -1,5 +1,6 @@
-<html>
+﻿<html>
 <head>
+  <link rel="icon" href="http://buildingof.com/favicon.png" />
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <link rel="stylesheet" type="text/css" href="/stylesheets/buildingof.css"/>
   <link href='http://fonts.googleapis.com/css?family=Lato:400,900|Libre+Baskerville:400,700,400italic' rel='stylesheet' type='text/css'>
