--- a/stories/home.html
+++ b/stories/home.html
@@ -25,7 +25,7 @@
     <h3 id="tagline">Chronicling the Rise and Fall of Startups</h3>
     <article id="first">
       <a href="/stories/building-of-stacklead.html"><h1 id="title">StackLead &amp; Pain Point Resolution</h1></a>
-      <section class="gist"><a href="http://stacklead.com">Stacklead</a> started from <a href="http://twitter.com/gwintrob">Gordon Wintrob</a> &amp; <a href="#">Ted Tomlinson</a>'s desire to address a long-standing problem in customer acquisition. Entrepreneurs are oft-advised to tackle problems they've faced&mdash;StackLead is a prime example of this.
+      <section class="gist"><a href="http://stacklead.com">Stacklead</a> started from <a href="http://twitter.com/gwintrob">Gordon Wintrob</a> &amp; <a href="#">Ted Tomlinson</a>'s desire to address a long-standing problem in customer acquisition. 
       </section>
       <p class="first-paragraph">Ted and I grew up in Los Angeles and started tinkering with computers in our early teens, but didn’t meet until attending MIT together in Boston. We were housemates in college and both studied computer sci...</p>
     </article>
