--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <h3 id="tagline">Chronicling the Rise and Fall of Startups</h3>
     <article id="first">
       <a href="/stories/building-of-stacklead.html"><h1 id="title">StackLead &amp; Pain Point Resolution</h1></a>
-      <section class="home-gist"><a href="http://stacklead.com">Stacklead</a> started from <a href="http://twitter.com/gwintrob">Gordon Wintrob</a> &amp; <a href="#">Ted Tomlinson</a>'s desire to address a long-standing problem in customer acquisition. Entrepreneurs are oft-advised to tackle problems they've faced&mdash;StackLead is a prime example of this.
+      <section class="home-gist"><a href="http://stacklead.com">Stacklead</a> started from <a href="http://twitter.com/gwintrob">Gordon Wintrob</a> &amp; <a href="#">Ted Tomlinson</a>'s desire to address a long-standing problem in customer acquisition.
       </section>
     </article>
 
