--- a/introduction/welcome-to-buildingof.html
+++ b/introduction/welcome-to-buildingof.html
@@ -14,7 +14,7 @@
       </a>
     </div>
     <div id="links">
-      <a href="/index.html" class="header-links" id="subscribe" style="margin-right: 2em">Subscribe
+      <a href="/landing.html" class="header-links" id="subscribe" style="margin-right: 2em">Subscribe
       </a>
       <a href="mailto:editors@buildingof.com?subject=I'd like to share my story
       &body=I'm currently working on ..." class="header-links" id="share-story">Share your story
