--- a/landing.html
+++ b/landing.html
@@ -2,6 +2,7 @@
 
 <html>
 <head>
+<link rel="icon" href="http://buildingof.com/favicon.png" />
   <link href="stylesheets/buildingof-landing.css" rel="stylesheet" type="text/css">
 <link href='http://fonts.googleapis.com/css?family=Lato:400,900|Libre+Baskerville:400,700,400italic' rel='stylesheet' type='text/css'>
 
