removed gist text

--- a/stories/building-of-pbx-me.html
+++ b/stories/building-of-pbx-me.html
@@ -25,7 +25,7 @@
   <section id="content">
     <article id="first">
       <h1 id="title">PBX.me and Venture Timing</h1>
-      <section class="gist"><a href="http://stacklead.com">Stacklead</a> started from <a href="http://twitter.com/gwintrob">Gordon Wintrob</a> &amp; <a href="#">Ted Tomlinson</a>'s desire to address a long-standing problem in customer acquisition. Entrepreneurs are oft-advised to tackle problems they've faced&mdash;StackLead is a prime example of this.<br><br>They're also a <a href="http://ycombinator.com">Y Combinator</a> backed startup.
+      <section class="gist">
       </section>
 
 <p class="first-paragraph">From a golf course-side lemonade stand I ran when I was 8 to a door-to-door car washing service I created when I was 12, up until I registered my first “real” business -- a website development agency -- at the age of 16, I’ve been selling since I learned to talk.</p>
