added ol closing tag and removed blockquote

--- a/stories/building-of-pbx-me.html
+++ b/stories/building-of-pbx-me.html
@@ -54,8 +54,10 @@
 <p class="first-paragraph">Prior to founding RedStamp, I built a managed hosting service because the startup I was involved with went under and a lot of their customers were left in the cold. (Ironically, this happened because I was too good at my job -- I made too many sales and the startup just couldn’t </p>
 <p>Being in that space, we would frequently be asked to setup asterisk VOIP servers so companies could use VOIP. In doing so, we’d often hear them complain about call quality, issues with scaling, integrations, and other problems. It became very clear to me that, though the need was there, the only solutions available were far from ideal. </p>
 <p>Our entire system has been shaped by focusing on two main things:<br>
-<ol><li>1. Create a system that easily integrates with the things you already use.</li>
-<li>2. Make the entire experience easy and beautiful.</li></p>
+<ol>
+  <li>Create a system that easily integrates with the things you already use.</li>
+  <li>Make the entire experience easy and beautiful.</li>
+</ol></p>
 <p>Thinking about those two core values has helped us to create most of our best features:
 <ul>
   <li>Telemarketer blocking</li>
@@ -79,7 +81,7 @@
 
 <h2>Finding a Foothold</h2>
 <p>Being involved in the start-up community, running an agency, and being in the managed service provider space for many years has given me the advantage of having a very high quality network of people to bounce ideas off of.</p>
-<blockquote class="pullquote">Our first customers were our batchmates in Y Combinator. They forwarded us their new leads’ email addresses and we researched each one by hand before automating our system.</blockquote>
+
 <p>While ultimately the only thing that validates this business model is our ability to get and keep paying customers, we know the market is already there, and our approach is very obvious. We also have more than 2,000 people subscribed to our pre-launch e-mail list, so there’s clearly a lot of interest in what we’re doing.</p>
 
 <p>We’ve got a lot of things on our plate right now. Obviously, we’re working on finishing the beta. But in addition to that, we’re also working on marketing concepts and campaign ideas for the web, developing the best possible UI for the web dashboard, creating a backend/database code, and (of course) writing wonderful articles for sites like this. :)</p>
