added list styling

--- a/stories/building-of-pbx-me.html
+++ b/stories/building-of-pbx-me.html
@@ -28,14 +28,14 @@
       <section class="gist">
       </section>
 
-<p class="first-paragraph">From a golf course-side lemonade stand I ran when I was 8 to a door-to-door car washing service I created when I was 12, up until I registered my first “real” business -- a website development agency -- at the age of 16, I’ve been selling since I learned to talk.</p>
+<p class="first-paragraph">From a golf course-side lemonade stand I ran when I was 8 to a door-to-door car washing service I created when I was 12, up until I registered my first “real” business&mdash;a website development agency&mdash;at the age of 16, I’ve been selling since I learned to talk.</p>
 <p>Every business I’ve ever created has been B2B because my way of thinking resonates much better with other businesses as opposed to consumers, that’s where I feel most comfortable. B2B work is more about providing value and building a long term relationship, whereas B2C is?</p>
 <p>PBX.me has actually been a very long process. I initially tried to start the service in 2008, but the market just wasn’t ready for it yet, and there were a lot of good reasons it didn’t work back then:<br>
 <ul>
 <li>VOIP had a terrible reputation that it 100% deserved.</li>
 <li>Internet speeds were not fast enough to support VOIP at all businesses.</li>
 <li>Mobile data was too slow and too expensive to support VOIP.</li>
-<li>Not enough ground had been broken in the industry yet – just six years ago, the cost was going to be 20 to 30 times greater than it is today.</li>
+<li>Not enough ground had been broken in the industry yet&mdash;just six years ago, the cost was going to be 20 to 30 times greater than it is today.</li>
 <li>Not enough businesses were using smart phones.</li>
 <li>Smart phones were not powerful or reliable enough yet.</li></ul></p>
 <blockquote class="pullquote">After about six months of exploring all of the options, I decided that it wasn’t the right time and shelved the idea.</blockquote>
@@ -44,14 +44,14 @@
 
 <p>In fact, PBX.me is one of the main reasons that I founded RedStamp; there were others (it helped me to hone and practice my marketing/B2B/startup skills on a daily basis for clients, brought in a nice revenue stream once people saw that we were putting out quality work, and enabled me to get into business with @sririe, the partner who’s been working with me pretty much since we both started working), but creating RedStamp allowed me to build a tech team that would be capable of a venture like PBX.me.</p>
 
-<p>I did all of this because I knew this type of business would one day be something that I could make successful. I could spot the technology trends and tell that the world was headed in this direction -- just like we’ll all be driving electric cars once the technology comes of age and the various logistical problems are resolved.</p>
+<p>I did all of this because I knew this type of business would one day be something that I could make successful. I could spot the technology trends and tell that the world was headed in this direction&mdash;just like we’ll all be driving electric cars once the technology comes of age and the various logistical problems are resolved.</p>
 
 <blockquote class="pullquote">For PBX.me, that time came in 2013.</blockquote>
 <p>All of the previous issues were not only gone, they were and still are continuing to improve (faster internet, the rapid growth of smartphone use, LTE for mobile, and so on). In the interim, I had also co-founded and spent three years running a marketing agency that worked directly with the market we wanted to target, creating marketing campaigns and offering web development and branding services. This translated to vital connections (I got to work with several of the CEOs on Forbes Top 25 Under 25, former Symantec execs, and a bunch of people from MIT and Ivy League schools) and a good working knowledge of the inner workings of a lot of different companies. </p>
 <p>Leveraging these relationships has gone a long way towards allowing me to skip a seed round of funding for PBX.me, opting instead to self-fund it. And because investors are always looking to accelerate things and get the best possible product out there as fast as possible, self-funding has allowed me to focus the product development part of the process. </p>
 
 <h2>Initial Inspiration</h2>
-<p class="first-paragraph">Prior to founding RedStamp, I built a managed hosting service because the startup I was involved with went under and a lot of their customers were left in the cold. (Ironically, this happened because I was too good at my job -- I made too many sales and the startup just couldn’t </p>
+<p class="first-paragraph">Prior to founding RedStamp, I built a managed hosting service because the startup I was involved with went under and a lot of their customers were left in the cold. (Ironically, this happened because I was too good at my job&mdash;I made too many sales and the startup just couldn’t </p>
 <p>Being in that space, we would frequently be asked to setup asterisk VOIP servers so companies could use VOIP. In doing so, we’d often hear them complain about call quality, issues with scaling, integrations, and other problems. It became very clear to me that, though the need was there, the only solutions available were far from ideal. </p>
 <p>Our entire system has been shaped by focusing on two main things:<br>
 <ol>
